Trabajando en Login

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -21,7 +21,8 @@
         <li><a href="/">Página principal</a></li>
 
         <li><a href="/usuario/rol">Usuarios y privilegios</a></li>
-
+        <li><a href="/usuario/login">Login</a></li>
+        <li><a href="/usuario/signup">Register</a></li>
         <li><a href="/guias">Guías</a></li>
       </ul> 
     </div>
