--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,8 @@
 <%- include('includes/header.ejs') %>
-<link rel="stylesheet" href="/css/stylarbac.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/materialize-css/dist/css/materialize.css" media="screen,projection" />
+
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
