--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -1,5 +1,7 @@
 <%- include('includes/header.ejs') %><div id="index-banner" class="parallax-container">
-<main>
+<main style="
+  background-image: url('/img/queretaro-dark.jpg');
+  background-size: cover;">
   
   <div class="section no-pad-bot">
       <div class="container">
