Eventos in principal

--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -49,6 +49,32 @@
         <%}%>
         <%}%>
       </ul>
+
+
+
+
+      <div class="row flex">
+        <div class="col s10">
+          <h4 class="text-bold"> Lista de eventos </h4>
+        </div>      
+    </div>
+      <ul class="cards">
+        <% for (let museo of museos){%>
+          <%if(museo.status == 1){%>
+        <li class="card-panel card-pers hoverable" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/img/queretaro.png');">
+          <div>
+            <h3 class="card-title white-text"><%=museo.nom_museo%></h3>
+            <div class="card-content white-text">
+              <p><%=museo.desc_museo.substring(0, 100)%> . . .</p>
+            </div>
+          </div>
+          <div class="card-link-wrapper">
+            <a href="" class="btn-floating primary-color card-link"> <i class="material-icons left">edit</i> </a>
+          </div>
+        </li>
+        <%}%>
+        <%}%>
+      </ul>
   </div>
 </main>
 <%- include('includes/footer.ejs') %>
