--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,13 +30,15 @@
                             <div class="col s12 center-align">
                                 <div class="col s3"></div>
                                 <div class="col s6">
+                                    <form method="POST" action="" id="login">
                                     <br>
-                                    <input type="text" placeholder="Correo">
+                                    <input type="text" placeholder="Correo" name="us_correo" id="us_correo">
                                     <br>
-                                    <input type="password" placeholder="Contraseña">
+                                    <input type="password" placeholder="Contraseña" name="us_password" id="us_password">
                                     <br>
                                     <br>
-                                    <a href="" class="waves-effect primary-color btn"> Iniciar Sesion </a>
+                                    <button type="submit" class="waves-effect primary-color btn">Iniciar Sesion</button>
+                                    </form>
                                 </div>
                                 <div class="col s3"></div>
                             </div>
