--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -1,5 +1,84 @@
 <%- include('includes/header_image.ejs') %>
 <main>
+
+  <!-- MODAL PARA SUBIR IMÁGEN -->
+  <div id="modal_img" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <div class="row">
+            <h4>Subir Imágen</h4>
+        </div>
+        <hr>
+        <div class="row">
+            <h5> Imágen principal </h5>
+        </div>
+        <div class="row">
+            <div class="col s6">
+                <img src="../img/queretaro.png" class="responsive-img imgPicker">
+            </div>
+            <div class="col s6">
+                <form method="POST" action="/profile-upload-single" enctype="multipart/form-data">
+                    <div class="file-field input-field">
+                      <div class="btn">
+                        <span>File</span>
+                        <input type="file" name="profile-file">
+                      </div>
+                      <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                      </div>
+                      <button class="btn small primary-color waves-effect waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right">send</i>
+                    </button>
+                    </div>
+                </form>
+            </div>
+            
+        </div>
+        <div class="row">
+            <h5> Imágen de fondo </h5>
+        </div>
+        <div class="row">
+            <div class="col s6">
+                <img src="../img/queretaro.png" class="responsive-img imgPicker">
+            </div>
+            <div class="col s6">
+                <form method="POST" action="/profile-upload-single" enctype="multipart/form-data">
+                    <div class="file-field input-field">
+                      <div class="btn">
+                        <span>File</span>
+                        <input type="file" name="profile-file">
+                      </div>
+                      <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                      </div>
+                      <button class="btn small primary-color waves-effect waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right">send</i>
+                    </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        
+    </div>
+    <div class="modal-footer">
+      <a class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
+    </div>
+  </div>
+
+
+  <!-- MODAL PARA SUBIR HORARIOS -->
+
+  <div id="modal_hr" class="modal">
+    <div class="modal-content">
+      <h4>Horarios del museo</h4>
+      <p>Elegir horario del museo</p>
+    </div>
+    <div class="modal-footer">
+      <a class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
+    </div>
+  </div>
+
+
+
 <div class="container">
     <h1 class="white-text">Nuevo museo</h1>
         <div class="white min-container">
@@ -8,10 +87,10 @@
                 <div class="col s5">
                     <div class="row valign-wrapper">
                         <div class="col s10">
-                            <div class="card">
+                            <div class="card imgPicker">
                                 <div class="card-image">
-                                  <img src="img/queretaro.png">
-                                  <a class="btn-floating halfway-fab waves-effect waves-light primary-color"><i class="material-icons">edit</i></a>
+                                  <img class="imgPicker" src="../img/queretaro.png">
+                                  <a class="primary-color waves-effect waves-light btn-floating halfway-fab modal-trigger" href="#modal_img"><i class="material-icons">edit</i></a>
                                 </div>
                               </div>
                         </div>
@@ -20,8 +99,8 @@
                 <div class="col s7"> 
                     <div class="row center">
                         <div class="input-field col s10 offset-s1">
-                            <input placeholder="Ej: MAQRO" id="nombre_museo" type="text" class="validate">
-                            <label for="nombre_museo"> Nombre del Museo </label>
+                            <input placeholder="Ej: MAQRO" id="nom_museo" type="text" class="validate">
+                            <label for="nom_museo"> Nombre del Museo </label>
                         </div>
 
                     </div>
@@ -31,7 +110,7 @@
                                 <a class="btn waves-effect waves-light primary-color"><i class="material-icons left">add_box</i>Agregar salas </a>
                             </div>
                             <div class="col">
-                                <a class="btn waves-effect waves-light primary-color"><i class="material-icons left">calendar_month</i>Agregar horarios </a>
+                                <a class="btn waves-effect waves-light primary-color modal-trigger" href="#modal_hr"><i class="material-icons left">calendar_month</i>Agregar horarios </a>
                             </div>  
                         </div>
                         
@@ -48,17 +127,20 @@
                     <label for="num_museo"> Teléfono de contacto </label>
                 </div>
                 <div class="input-field col s5">
-                        <input placeholder="Ej: C. Ignacio Allende Sur 14" id="direccion_museo" type="text" class="validate">
-                    <label for="direccion_museo"> Dirección </label> 
+                        <input placeholder="Ej: C. Ignacio Allende Sur 14" id="ubicacion_museo" type="text" class="validate">
+                    <label for="ubicacion_museo"> Dirección </label> 
                 </div>
                 <a style="margin-right:30px;margin-top:10px" class="btn-floating waves-effect waves-light primary-color"><i class="material-icons left">location_on</i> </a>
             </div>
             <div class="row center margin-10">  
                 <div class="input-field col s10 offset-s1">
-                    <textarea id="textarea1" class="materialize-textarea"></textarea>
-                    <label for="textarea1"> Descripción </label>
+                    <textarea id="desc_museo" class="materialize-textarea validate"></textarea>
+                    <label for="desc_museo"> Descripción </label>
                 </div>
-                <button class="btn waves-effect waves-light green margin-10">
+                <input id="link_ubi" value="test">
+                <input id="imagen_principal" value="test">
+                <input  id="imagen_background" value="test">
+                <button onclick="submitMuseum()" class="btn waves-effect waves-light green margin-10">
                     <i class="material-icons left">check</i>
                     Registrar museo
                 </button>
@@ -72,4 +154,5 @@
     
 </div>
 </main>
+<script src="/js/script_nuevo_museo.js"></script>
 <%- include('includes/footer.ejs') %>
