--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -10,6 +10,10 @@
     <!--Import materialize.css-->
     <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/materialize-css/dist/css/materialize.css" media="screen,projection" />
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="/js/script_nuevo_museo.js"></script>
 </head>
 <body>
   <nav class="primary-color" role="navigation">
