--- a/views/rbac_registrar.ejs
+++ b/views/rbac_registrar.ejs
@@ -29,7 +29,7 @@
                     <td><%= usuario.id_rol%></td>  
                     <td><%= usuario.nom_user%></td>
                     
-                    <td> <a class="waves-effect waves-light btn modal-trigger" onclick="getInfoUser()">Modal</a></td>
+                    <td> <a class="waves-effect waves-light btn modal-trigger"  href="#modal1" onclick="getInfoUser()">Modal</a></td>
                 </tr>
                 <input type="hidden" value="<%=usuario.id_user%>" id="id_user">
                 <%}%>
@@ -54,25 +54,7 @@
           
         <br>
         <br>
-        <!---div class="input-field">
-            <select>
-              <option value="" disabled selected>Choose your option</option>
-              <% for (let rol of roles){%>
-                <option selected="false" value="<%=rol.id_rol%>" id="rol<%= rol.id_rol %>"> <%=rol.nom_rol%> </option>
-            <%}%>
-            </select>
-            <label>Rol</label>
-          </div-->
-        <br>
-        <!--div class="input-field">
-            <select>
-              <option value="" disabled selected>Choose your option</option>
-              <% for (let museo of museos){%>
-                <option selected="false" value="<%=museo.id_museo%>" id="museo<%=museo.id_museo %>"> <%=museo.nom_museo%> </option>
-            <%}%>
-            </select>
-            <label>Museos</label>
-          </div-->
+        
       </div>
 
     </div>
