--- a/views/guias.ejs
+++ b/views/guias.ejs
@@ -7,7 +7,7 @@
 </style>
 
 
-<div class="container">
+<div class="container" style="margin-bottom: 10%;">
     <h1 class="white-text">Guías</h4>
     <div class="white" style="padding-top: 2em; padding-bottom: 2em;">
         <div class="row center valign-wrapper ">
@@ -15,7 +15,10 @@
                 <img src="https://1.bp.blogspot.com/-rgm8pHvQUps/V8R_6c75FUI/AAAAAAAACRo/O0TPA4bRsYcNtP5OacBWfNHdIgomtNkhQCLcB/s1600/lanzamiento%2Benanos.jpg" style="width: fit-content; height: 100px; border-radius: 9px;">
             </div>
             <div class="col s6">
-                <div class="row truncate" style="margin-bottom: 5px !important; margin-top:20px; border: 1px solid black; border-radius: 10px; padding: 10px;">
+                <div class="row">
+                    <h5 class="left" style="margin: 0 0 0 0 !important;">Guia para Limitacion X</h5>
+                </div>
+                <div class="row truncate" style="margin-bottom: 5px !important; border: 1px solid black; border-radius: 10px; padding: 10px;">
                     at. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 </div>
                 <div class="row" style="border: 1px dashed black; border-radius: 10px;">
@@ -23,7 +26,7 @@
                 </div>
             </div>
             <div class="col s3">
-                <a class="blue-gradient-btn btn-large hoverable">
+                <a class="blue-gradient-btn btn-large hoverable" href="/guias/editar_guia">
                     Editar Guía
                 </a>
             </div>
@@ -33,6 +36,9 @@
                 <img src="https://1.bp.blogspot.com/-rgm8pHvQUps/V8R_6c75FUI/AAAAAAAACRo/O0TPA4bRsYcNtP5OacBWfNHdIgomtNkhQCLcB/s1600/lanzamiento%2Benanos.jpg" style="width: fit-content; height: 100px; border-radius: 9px;">
             </div>
             <div class="col s6">
+                <div class="row">
+                    <h5 class="left" style="margin: 0 0 0 0 !important;">Guia para Limitacion X</h5>
+                </div>
                 <div class="row truncate" style="margin-bottom: 5px !important; margin-top:20px; border: 1px solid black; border-radius: 10px; padding: 10px;">
                     at. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 </div>
@@ -41,7 +47,7 @@
                 </div>
             </div>
             <div class="col s3">
-                <a class="blue-gradient-btn btn-large hoverable">
+                <a class="blue-gradient-btn btn-large hoverable"  href="/guias/editar_guia">
                     Editar Guía
                 </a>
             </div>
@@ -51,6 +57,9 @@
                 <img src="https://1.bp.blogspot.com/-rgm8pHvQUps/V8R_6c75FUI/AAAAAAAACRo/O0TPA4bRsYcNtP5OacBWfNHdIgomtNkhQCLcB/s1600/lanzamiento%2Benanos.jpg" style="width: fit-content; height: 100px; border-radius: 9px;">
             </div>
             <div class="col s6">
+                <div class="row">
+                    <h5 class="left" style="margin: 0 0 0 0 !important;">Guia para Limitacion X</h5>
+                </div>
                 <div class="row truncate" style="margin-bottom: 5px !important; margin-top:20px; border: 1px solid black; border-radius: 10px; padding: 10px;">
                     at. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 </div>
@@ -59,14 +68,14 @@
                 </div>
             </div>
             <div class="col s3">
-                <a class="blue-gradient-btn btn-large hoverable">
+                <a class="blue-gradient-btn btn-large hoverable"  href="/guias/editar_guia">
                     Editar Guía
                 </a>
             </div>
         </div>
         <div class="row center valign-wrapper">
             <div class="col s3">
-                    <a class="grey-gradient-btn btn-large hoverable" style="width: fit-content; border-radius: 9px; text-align: center;">
+                    <a class="grey-gradient-btn btn-large hoverable" href="/guias/agregar_guia" style="width: fit-content; border-radius: 9px; text-align: center;">
                         <i class="material-icons">add</i>
                         Agregar
                     </a>
@@ -84,7 +93,4 @@
 </div>
 
 
-
-
-
-<!-- <%- include('includes/footer.ejs') %> -->
+<%- include('includes/footer.ejs') %>
