--- a/views/rbac_registrar.ejs
+++ b/views/rbac_registrar.ejs
@@ -28,7 +28,7 @@
                       <td><%= usuario.correo_user%></td>
                     <td><%= usuario.id_user%></td>  
                     <td><%= usuario.nom_user%></td>
-                    <td> <button class="waves-effect waves-light btn modal-trigger" href="#modal1" onclick="getInfoUser()" value="<%=usuario.id_user%>" id="boton">Modal</button></td>
+                    <td> <button class="waves-effect waves-light btn modal-trigger" href="#modal1" onclick="getInfoUser(this)" value="<%=usuario.id_user%>" id="<%=usuario.id_user%>">Modal</button></td>
                 </tr>
                 <input type="hidden" value="<%=usuario.id_user%>" id="id_user">
                 <%}%>
@@ -45,12 +45,13 @@
 
       <div class="col s4" style="text-align: center;">
         <img src="https://img.freepik.com/vector-premium/perfil-avatar-hombre-icono-redondo_24640-14044.jpg?w=2000" height="50%" width="50%"   alt="" class="circle responsive-img">
-        <h6 id="nom_user">Jorge Guerrero Díaz</h6>
+        <h6 id="nom_user"></h6>
       </div>
 
       <div class="col s6">
-          <label for="disabled">Correo Electronico:</label>
-          <input disabled value="jorgeguerrero909@gmail.com" id="disabled" type="text" class="validate">
+        <div id="correo">
+          
+        </div>
         <br>
         <br>
         <div>
@@ -75,7 +76,7 @@
 
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Salir</a>
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Guardar Cambios</a>
+      <a onclick="updateUser()" class="modal-close waves-effect waves-green btn-flat">Guardar Cambios</a>
     </div>
   </div>
           
