--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -1,6 +1,6 @@
 <%- include('includes/header_image.ejs') %>
 <main>
-
+<form id="nuevo_imagen" method="POST" enctype="multipart/form-data">
   <!-- MODAL PARA SUBIR IMÁGEN -->
   <div id="modal_img" class="modal modal-fixed-footer">
     <div class="modal-content">
@@ -16,28 +16,10 @@
                 <img src="../img/queretaro.png" class="responsive-img imgPicker">
             </div>
             <div class="col s6">
+                <input type="file" name="url_imagen">
 
-                <!-- <input type="file" name="uploadFile" id="uploadFile">
-            <input type="submit" value="upload"> -->
+                
 
-
-                <form id="uploadForm" enctype="multipart/form-data">
-                    <input type="file" name="uploadFile" id="uploadFile">
-                    <input type="submit" value="upload">
-                    <!-- <div class="file-field input-field">
-                      <div class="btn">
-                        <span>File</span>
-                        <input type="file" name="uploadFile" id="uploadFile">
-                      </div>
-                      <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
-                      </div>
-                      <input type="submit" value="upload">
-                      <button class="btn small primary-color waves-effect waves-light" onclick="submitImage()">Submit
-                        <i class="material-icons right">send</i> 
-                    </button> 
-                    </div> -->
-                </form>
             </div>
             
         </div>
@@ -49,20 +31,20 @@
                 <img src="../img/queretaro.png" class="responsive-img imgPicker">
             </div>
             <div class="col s6">
-                <form method="POST" action="/profile-upload-single" enctype="multipart/form-data">
+                
                     <div class="file-field input-field">
                       <div class="btn">
                         <span>File</span>
-                        <input type="file" name="profile-file">
+                        <input type="file">
                       </div>
                       <div class="file-path-wrapper">
                         <input class="file-path validate" type="text">
                       </div>
-                      <button class="btn small primary-color waves-effect waves-light" type="submit" name="action">Submit
+                      <button class="btn small primary-color waves-effect waves-light" >Submit
                         <i class="material-icons right">send</i>
                     </button>
                     </div>
-                </form>
+                
             </div>
         </div>
         
@@ -107,7 +89,7 @@
                 <div class="col s7"> 
                     <div class="row center">
                         <div class="input-field col s10 offset-s1">
-                            <input placeholder="Ej: MAQRO" id="nom_museo" type="text" class="validate">
+                            <input placeholder="Ej: MAQRO" id="nom_museo" name="nom_museo" type="text" class="validate">
                             <label for="nom_museo"> Nombre del Museo </label>
                         </div>
 
@@ -131,24 +113,23 @@
             <div class="row center margin-10">  
                 
                 <div class="input-field col s5 offset-s1">
-                    <input placeholder="Ej: 442-212-2357" id="num_museo" type="text" class="validate">
-                    <label for="num_museo"> Teléfono de contacto </label>
+                    <input placeholder="Ej: 442-212-2357" id="num_museo" name="num_museo" type="text" class="validate">
+                    <label for="num_museo" > Teléfono de contacto </label>
                 </div>
                 <div class="input-field col s5">
-                        <input placeholder="Ej: C. Ignacio Allende Sur 14" id="ubicacion_museo" type="text" class="validate">
+                        <input placeholder="Ej: C. Ignacio Allende Sur 14" name="ubicacion_museo" id="ubicacion_museo" type="text" class="validate">
                     <label for="ubicacion_museo"> Dirección </label> 
                 </div>
                 <a style="margin-right:30px;margin-top:10px" class="btn-floating waves-effect waves-light primary-color"><i class="material-icons left">location_on</i> </a>
             </div>
             <div class="row center margin-10">  
                 <div class="input-field col s10 offset-s1">
-                    <textarea id="desc_museo" class="materialize-textarea validate"></textarea>
+                    <textarea id="desc_museo" name="desc_museo" class="materialize-textarea validate"></textarea>
                     <label for="desc_museo"> Descripción </label>
                 </div>
-                <input id="link_ubi" value="test">
-                <input id="imagen_principal" value="test">
-                <input  id="imagen_background" value="test">
-                <button onclick="submitMuseum()" class="btn waves-effect waves-light green margin-10">
+                
+               
+                <button type="submit" value="upload" class="btn waves-effect waves-light green margin-10">
                     <i class="material-icons left">check</i>
                     Registrar museo
                 </button>
@@ -161,6 +142,7 @@
     
     
 </div>
+</form>
 </main>
 <script src="/js/script_nuevo_museo.js"></script>
 <%- include('includes/footer.ejs') %>
