--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -18,7 +18,7 @@
                             <img src="../assets/img/image_placeholder.jpg" style="border-radius: 20px;">
                             <div class="file-field input-field">
                                 <a type="file" class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
-                                    <input type="file" accept="image/png, image/jpg, image/jpeg">
+                                    <input type="file" accept="image/png, image/jpg, image/jpeg" name="imagen">
                                     <i class="tiny material-icons">edit</i>
                                 </a>
                             </div>
@@ -30,18 +30,18 @@
                         <div class="col s6">
                             <h5>Nombre de la Limitación</h5>
                             <!-- <label for="nombre_limitacion">Nombre de la Limitacion</label> -->
-                            <input id="nombre_limitacion" placeholder="Ejemplo: Limitaciones Visuales" type="text">
+                            <input id="nombre_limitacion" placeholder="Ejemplo: Limitaciones Visuales" type="text" name="nombre">
                         </div>
                         <div class="col s6">
                             <h5>Icono</h5>
                             <!-- <label for="icono_limitacion">Icono de la Limitación</label> -->
-                            <input id="icono_limitacion" type="file" class="customFile" accept="image/png, image/jpg, image/jpeg">
+                            <input id="icono_limitacion" type="file" class="customFile" accept="image/png, image/jpg, image/jpeg" name="icono">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col s12">
                             <h5>Descripcion</h5>
-                            <textarea placeholder="Descripcion de Limitacion..." id="textarea2" class="materialize-textarea" data-length="120"></textarea>
+                            <textarea placeholder="Descripcion de Limitacion..." id="textarea2" class="materialize-textarea" data-length="120" name="descripcion"></textarea>
                             <!-- <label for="textarea2">Descripcion</label> -->
                           </div>
                     </div>
@@ -51,7 +51,7 @@
                 <div class="col s1" style="margin-top: 0px;" ></div>
                 <div class="col s10" style="margin-top: 0px; margin-bottom: 1em;" >
                     <h5>TIPS</h5>
-                    <textarea placeholder="Escribe Tips..." id="textarea2" class="materialize-textarea" data-length="200"></textarea>
+                    <textarea placeholder="Escribe Tips..." id="textarea2" class="materialize-textarea" data-length="200" name="tip"></textarea>
                     <!-- <label for="textarea2">Descripcion</label> -->
                 </div>
                 <div class="col s1" style="margin-top: 0px;" ></div>
@@ -64,7 +64,7 @@
                 <div class="col s7" style="margin: auto 0;" >
                     <div class="left">
                         <!-- <input id="icono_limitacion" type="file" accept="image/png, image/jpg, image/jpeg, Video/mp4" class="customFileVideo"> -->
-                        <input type="text" placeholder="Link del Video...">
+                        <input type="text" placeholder="Link del Video..." name="video">
                     </div>
                 </div>
                 <div class="col s1" style="margin-top: 0px;" ></div>
