--- a/views/museo_registrar.ejs
+++ b/views/museo_registrar.ejs
@@ -132,7 +132,7 @@
         </div>
         <button class="btn waves-effect waves-light green margin-10">
           <i class="material-icons left">check</i>
-          Registrar museo
+          Guardar cambios
         </button>
       </div>
     </div>
