--- a/views/rbac_registrar.ejs
+++ b/views/rbac_registrar.ejs
@@ -26,7 +26,7 @@
           <% for (let usuario of usuarios){%>
                 <tr>
                       <td><%= usuario.correo_user%></td>
-                    <td><%= usuario.id_user%></td>  
+                    <td><%= usuario.nom_rol%></td>  
                     <td><%= usuario.nom_user%></td>
                     <td> <button class="waves-effect waves-light btn modal-trigger" href="#modal1" onclick="getInfoUser(this)" value="<%=usuario.id_user%>" id="<%=usuario.id_user%>">Modal</button></td>
                 </tr>
