--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -24,6 +24,10 @@
   
 
   <script src="js/init.js"></script>
+  <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOonz9xYahAmBqfXi0Vy6zdrHAlj9Pdw8&callback=initMap&v=weekly"
+      defer
+    ></script>
 
   <script>
     M.AutoInit();
