--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -1,59 +1,20 @@
 <%- include('includes/header_image.ejs') %>
 <main>
+    <script type="module" src="/js/script_maps.js"></script>
 <form id="nuevo_imagen" method="POST" enctype="multipart/form-data">
-  <!-- MODAL PARA SUBIR IMÁGEN -->
-  <div id="modal_img" class="modal modal-fixed-footer">
+
+
+
+  <!-- Modal Structure -->
+  <div id="modal_link" class="modal bottom-sheet">
     <div class="modal-content">
-        <div class="row">
-            <h4>Subir Imágen</h4>
-        </div>
-        <hr>
-        <div class="row">
-            <h5> Imágen principal </h5>
-        </div>
-        <div class="row">
-            <div class="col s6">
-                <img src="../img/queretaro.png" class="responsive-img imgPicker">
-            </div>
-            <div class="col s6">
-                <input type="file" name="url_imagen">
-
-                
-
-            </div>
-            
-        </div>
-        <div class="row">
-            <h5> Imágen de fondo </h5>
-        </div>
-        <div class="row">
-            <div class="col s6">
-                <img src="../img/queretaro.png" class="responsive-img imgPicker">
-            </div>
-            <div class="col s6">
-                
-                    <div class="file-field input-field">
-                      <div class="btn">
-                        <span>File</span>
-                        <input type="file">
-                      </div>
-                      <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
-                      </div>
-                      <button class="btn small primary-color waves-effect waves-light" >Submit
-                        <i class="material-icons right">send</i>
-                    </button>
-                    </div>
-                
-            </div>
-        </div>
-        
+      <h4>Modal Header</h4>
+      <div id="map" style="height: 400px;width: 100%;"></div>
     </div>
     <div class="modal-footer">
-      <a class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
     </div>
   </div>
-
 
   <!-- MODAL PARA SUBIR HORARIOS -->
 
@@ -71,6 +32,7 @@
 
 <div class="container">
     <h1 class="white-text">Nuevo museo</h1>
+    
         <div class="white min-container">
             <div class="row center margin-10">  
                 <!-- valign-wrapper -->
@@ -79,8 +41,9 @@
                         <div class="col s10">
                             <div class="card imgPicker">
                                 <div class="card-image">
-                                  <img class="imgPicker" src="../img/queretaro.png">
-                                  <a class="primary-color waves-effect waves-light btn-floating halfway-fab modal-trigger" href="#modal_img"><i class="material-icons">edit</i></a>
+                                  <img class="imgPicker imgP" src="../img/no-img.jpg">
+                                  <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
+                                  <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
                                 </div>
                               </div>
                         </div>
@@ -120,7 +83,7 @@
                         <input placeholder="Ej: C. Ignacio Allende Sur 14" name="ubicacion_museo" id="ubicacion_museo" type="text" class="validate">
                     <label for="ubicacion_museo"> Dirección </label> 
                 </div>
-                <a style="margin-right:30px;margin-top:10px" class="btn-floating waves-effect waves-light primary-color"><i class="material-icons left">location_on</i> </a>
+                <a style="margin-right:30px;margin-top:10px" class="btn-floating waves-effect waves-light primary-color modal-trigger" href="#modal_link"><i class="material-icons left">location_on</i> </a>
             </div>
             <div class="row center margin-10">  
                 <div class="input-field col s10 offset-s1">
@@ -134,15 +97,11 @@
                     Registrar museo
                 </button>
             </div>
-
-
-        </div>
-
-        
-    
+        </div>   
     
 </div>
 </form>
 </main>
+
 <script src="/js/script_nuevo_museo.js"></script>
 <%- include('includes/footer.ejs') %>
