--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -57,23 +57,31 @@
       <div class="row flex">
         <div class="col s10">
           <h4 class="text-bold"> Lista de eventos </h4>
-        </div>      
+        </div>   
+        <div class="col s2">
+            
+          <a href="/museo/nuevo_museo" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a>
+        </div>   
     </div>
       <ul class="cards">
         <% for (let museo of museos){%>
           <%if(museo.status == 1){%>
-        <li class="card-panel card-pers hoverable" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/img/queretaro.png');">
-          <div>
-            <h3 class="card-title white-text"><%=museo.nom_museo%></h3>
-            <div class="card-content white-text">
-              <p><%=museo.desc_museo.substring(0, 100)%> . . .</p>
-            </div>
-          </div>
-          <div class="card-link-wrapper">
-            <a href="" class="btn-floating primary-color card-link"> <i class="material-icons left">edit</i> </a>
-          </div>
-        </li>
-        <%}%>
+            <li class="card-panel card-pers hoverable" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/uploads/<%=museo.imgP_museo%>') no-repeat; background-size: cover;">
+          
+              <div>
+                <a class="btn-floating green card-link" style="float:right;margin:0px;margin-left:10px"> <i class="material-icons">edit</i> </a>
+                <a onclick="deleteMuseum(this)" id="<%=museo.id_museo%>" class="btn-floating red card-link" style="float:right;margin:0px"> <i class="material-icons">delete</i> </a>
+                <h3 class="card-title white-text"><%=museo.nom_museo%></h3>
+                
+                <div class="card-content white-text">
+                  <p> Fecha: <%=museo.num_museo%> 
+                  </p>
+                  <p><%=museo.desc_museo.substring(0, 100)%> . . .</p>
+                </div>
+              </div>
+              
+            </li>
+            <%}%>
         <%}%>
       </ul>
   </div>
